fixed issue where h4 in pub card did not show in dark mode

--- a/app/components/PublicationCard/PublicationCard.css
+++ b/app/components/PublicationCard/PublicationCard.css
@@ -6,6 +6,7 @@
 }
 
 .publication-card h4 {
+    position: relative;
     padding-left: 36px;
     padding-top: 30px;
     font-size: 20px !important;
